Bug 45003 - PDF import problems: join and cap errors
Summary: PDF import problems: join and cap errors
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
3.5.0 RC1
Hardware: x86 (IA32) Windows (All)
: medium normal
Assignee: vvort
URL:
Whiteboard: target:4.3.0
Keywords:
: 52301 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-01-20 11:23 UTC by mathog
Modified: 2023-07-07 13:41 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screen shot, top is from PDF, bottom from LODraw (41.76 KB, image/png)
2012-01-20 11:23 UTC, mathog
Details
example pdf (9.77 KB, application/x-download)
2012-01-20 11:30 UTC, mathog
Details
source SVG, pdf made by "save as -> pdf" of source in Inkscape (23.00 KB, image/svg+xml)
2012-01-20 11:31 UTC, mathog
Details

Note You need to log in before you can comment on or make changes to this bug.
Description mathog 2012-01-20 11:23:52 UTC
Created attachment 55855 [details]
Screen shot, top is from PDF, bottom from LODraw

More PDF import errors:

1.  joins become "rounded"
2.  all caps become blunt (I think the variant where the line ends at the control point)
3.  text is printed incorrectly (note the extra space)
Comment 1 mathog 2012-01-20 11:27:02 UTC
Problem is identical on 3.4.4 release on Windows.
Comment 2 mathog 2012-01-20 11:30:30 UTC
Created attachment 55857 [details]
example pdf
Comment 3 mathog 2012-01-20 11:31:03 UTC
Created attachment 55858 [details]
source SVG, pdf made by "save as -> pdf" of source in Inkscape
Comment 4 tester8 2012-01-20 14:22:14 UTC
Reproduced with

LOdev 3.5.0rc1
e40af8c-10029e3-615e522-88673a2-727f724
Ubuntu 10.04.3 x86
Linux 2.6.32-37-generic Russian UI
Comment 5 Samuel Mehrbrodt 2013-02-07 21:15:50 UTC
*** Bug 52301 has been marked as a duplicate of this bug. ***
Comment 7 Gabriel Diosan 2013-02-12 15:18:43 UTC
I have sponsored this issue on Freedom Sponsors as well. Would be nice to get the PDF import into good shape.
Comment 8 vvort 2014-02-12 10:40:28 UTC
Please check this patch:
https://gerrit.libreoffice.org/8009
Comment 9 Commit Notification 2014-02-12 10:50:48 UTC
Vort committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9616b786adb9491f7c26fc0f1053e7b3d1b35f27

fdo#45003 PDF import: Implementing linejoin and linecap properties



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.