fdo#45003 PDF import: Implementing linejoin and linecap properties

Change-Id: I4b09cd7b970d5aca4500ae333edef0e4c2f618b9